# TravelAssistant

./: .gitignore  README.md  env.example  pyproject.toml  requirements-all.txt  requirements-base.txt
data_ingestion_service/: __init__.py  analyze_html_structure.py  config.py  exceptions.py  fetch_and_process_poland.py  parse_wikivoyage_html.py  process_poland_html.py  pyproject.toml  requirements.txt  run_ingestion.py
data_ingestion_service/app/: __init__.py  main.py
data_ingestion_service/app/api/: __init__.py
data_ingestion_service/app/api/v1/: __init__.py  ingestion.py  schemas.py
data_ingestion_service/fetchers/: __init__.py  base_fetcher copy.py  drone_laws_fetcher.py  drone_made_fetcher.py  lonely_planet_fetcher.py  travel_independent_fetcher.py  tripadvisor_fetcher.py  wikidata_fetcher.py  wikipedia_fetcher copy.py  wikipedia_fetcher.py  wikivoyage_fetcher.py  world_travel_guide_fetcher.py
data_ingestion_service/models/: __init__.py  attraction.py  country_info.py  hotel_offer.py  restaurant_info.py
data_ingestion_service/processors/: __init__.py  data_standardizer.py  llm_processor.py  text_cleaner.py
data_ingestion_service/utils/: __init__.py  file_manager.py
knowledge_base_service/: __init__.py  config.py  exceptions.py  pyproject.toml  requirements.txt
knowledge_base_service/app/: main.py
knowledge_base_service/app/api/v1/: __init__.py  documents.py  memory.py  schemas.py  search.py  test_data.py
knowledge_base_service/domain/: __init__.py
knowledge_base_service/domain/entities/: document.py  search_result.py
knowledge_base_service/domain/ports/: __init__.py  document_port.py  knowledge_base_port.py  memory_port.py  processor_port.py  vector_store_port.py
knowledge_base_service/infrastructure/adapters/: __init__.py  document_repository_adapter.py  embedding_adapter.py  knowledge_base_adapter.py  llm_adapter.py  memory_reader_adapter.py  processor_adapter.py  reranker_adapter.py
knowledge_base_service/infrastructure/adapters/vector_store/: __init__.py  qdrant_adapter.py  vector_store_factory.py
knowledge_base_service/infrastructure/database/: session.py
streamlit_app/: README.md  __init__.py  main.py  requirements.txt
streamlit_app/pages/: __init__.py  admin.py  chat.py  upload.py
streamlit_app/utils/: __init__.py  api_client.py  session_state.py
user_service/: __init__.py  pyproject.toml  requirements.txt
user_service/app/: __init__.py  main.py
user_service/app/api/v1/: __init__.py  auth.py  schemas.py  users.py
user_service/domain/: __init__.py
user_service/domain/entities/: user.py
user_service/domain/ports/: __init__.py  authentication_port.py  user_port.py
user_service/infrastructure/: __init__.py
user_service/infrastructure/adapters/: authentication_adapter.py  user_repository_adapter.py
user_service/infrastructure/database/: models.py  session.py
user_service/infrastructure/database/alembic/: env.py
user_service/migrations/: __init__.py  create_admin_user.py  run_all_migrations.bat  run_all_migrations.sh  setup_database.py
