[project]
name = "travel-assistant"
version = "0.1.0"
description = "AI-powered Travel Assistant with RAG and MCP - All services in one venv"
requires-python = ">=3.11"
dependencies = [
    # Base dependencies (shared across all services)
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "httpx>=0.25.0",
    "python-multipart>=0.0.6",
    
    # User Service dependencies
    "sqlalchemy>=2.0.0",
    "alembic>=1.12.0",
    "psycopg2-binary>=2.9.9",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    
    # Knowledge Base Service dependencies
    "pypdf>=3.17.0",
    "python-docx>=1.1.0",
    "sentence-transformers>=2.2.2",
    "qdrant-client>=1.7.0",
    "weaviate-client>=4.0.0",
    "chromadb>=0.4.18",
    
    # Trip Planning Service dependencies
    "langchain>=0.1.0",
    "langchain-openai>=0.0.2",
    "openai>=1.3.0",
    
    # Research dependencies (optional, for development)
    "jupyter>=1.0.0",
    "ipykernel>=6.25.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    
    # Additional utilities (optional)
    "aiohttp>=3.9.0",
    "redis>=5.0.0",
    "celery>=5.3.0",
]

# Note: This is a workspace root - no build system needed
# Individual services have their own pyproject.toml files

[tool.uv]
package = false  # This is not a package, just a dependency list

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.11.0",
    "ruff>=0.1.6",
    "mypy>=1.7.0",
]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true

